handbook/versioned_docs/version-1.4.0/xmlrpc.mdx
---
id: xmlrpc
title: 产品及架构介绍
---

### 定义

命名空间：TouchSocket.XmlRpc <br/>
程序集：[TouchSocket.XmlRpc.dll](https://www.nuget.org/packages/TouchSocket.XmlRpc)

## 一、说明

XmlRpc是**通用**的工作在**Internet**上的RPC。一个[XML-RPC](https://baike.baidu.com/item/XML-RPC/0) 消息就是一个请求体为xml的**http-post**请求，被调用的方法在服务器端执行并将执行结果以xml格式编码后返回。这与**编程语言无关**，与**操作系统无关**。在此处封装了**前后端**，使其使用更加方便、高效。


## 二、特点：

- **异常反馈** 。
- 支持自定义类型。
- 支持类型嵌套。
- 支持Web等调用。

## 三、创建服务

### 3.1 定义服务

在**服务器**端中新建一个类，继承于**RpcServer**类（或实现IRpcServer），然后在该类中写**公共方法**，并用**XmlRpc**属性标签标记，如果方法有**重载**，需要重新指定**函数键**。

```csharp
public class XmlServer : RpcServer
{
    [XmlRpc(true)]
    public int Sum(int a, int b)
    {
        return a + b;
    }

    [XmlRpc(true)]
    public int TestClass(MyClass myClass)
    {
        return myClass.A + myClass.B;
    }
}

public class MyClass
{
    public int A { get; set; }
    public int B { get; set; }
}

```

### 3.2 启动服务


```csharp
var service = new HttpService();

service.Setup(new TouchSocketConfig()
    .ConfigureContainer(a => 
    {
        a.AddConsoleLogger();
    })
    .ConfigurePlugins(a =>
    {
        a.UseXmlRpc()
        .SetXmlRpcUrl("/xmlRpc")
        .ConfigureRpcStore(store =>
        {
            store.RegisterServer<XmlServer>();

            //下列为生成客户端的代理代码
            File.WriteAllText("../../../RpcProxy.cs", store.GetProxyCodes("RpcProxy", new Type[] { typeof(XmlRpcAttribute) }));
            ConsoleLogger.Default.Info("成功生成代理");

        });
    })
    .SetListenIPHosts(7789))
    .Start();

service.Logger.Info("服务器已启动");
```

## 四、客户端调用

### 4.1 直接调用

因为XmlRpc是一套已经约定俗成的通讯协议。所以可以通过常规方法直接调用。

【Http访问】

使用Post方式，url=http://127.0.0.1:7789/xmlRpc

然后使用XmlRpc的规范传参。

```xml
<?xml version="1.0"?>
<methodCall>
    <methodName>Sum</methodName>
    <params>
        <param>
            <value>
                <i4>10</i4>
            </value>
        </param>
        <param>
            <value>
                <i4>20</i4>
            </value>
        </param>
    </params>
</methodCall>
```

### 4.2 使用客户端调用

使用客户端调用，则是使用RPC的范式进行调用，使用比较简单。

```csharp
private static void Main(string[] args)
{
    var client = GetXmlRpcClient();

    //直接调用
    var result1 = client.InvokeT<int>("Sum", InvokeOption.WaitInvoke, 10, 20);
    Console.WriteLine($"直接调用，返回结果:{result1}");

    var result2 = client.Sum(10, 20);//此Sum方法是服务端生成的代理。
    Console.WriteLine($"代理调用，返回结果:{result2}");

    Console.ReadKey();
}

private static XmlRpcClient GetXmlRpcClient()
{
    var jsonRpcClient = new XmlRpcClient();
    jsonRpcClient.Connect("http://127.0.0.1:7789/xmlRpc");
    Console.WriteLine("连接成功");
    return jsonRpcClient;
}
```

[本文示例Demo](https://gitee.com/RRQM_Home/TouchSocket/tree/master/examples/XmlRpc)